--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "capacitor": "^0.5.5",
     "firebase": "^7.20.0",
     "google-maps-react": "^2.0.6",
     "ionicons": "^5.0.0",
@@ -23,7 +24,6 @@
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
     "typescript": "3.8.3"
   },
   "scripts": {
@@ -48,7 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "2.4.1"
+    "@capacitor/cli": "2.4.1",
+    "react-scripts": "3.4.0"
   },
   "description": "An Ionic project"
 }
